# caption-editor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  turbo.json
.prompts/: 0_initial_prompt.txt  1_handover_prompt.txt  2_resume_prompt.txt  end_to_end_analysis_prompt.txt
docs/: COMMON-TYPES-TODO.md  GEMINI-TODO.md  ai-generation-flow-analysis.md  plan.md  prd-draft.md  reactplayer-reality-guide.md
docs/spec/: editor_spec.txt  recovery_spec.txt
