[tool.poetry]
name = "caption-editor"
version = "0.1.0"
description = "Caption Editor - Monorepo for video caption editing application"
authors = ["Caption Editor Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"